# XDGKit

./: .gitignore  CHANGES  README.md  meson.build  meson_options.txt
.github/workflows/: doxygen.yml
docs/: _x_d_g_i_n_i_8h_source.html  _x_d_g_i_point_8h_source.html  _x_d_g_i_rect_8h_source.html  _x_d_g_icon_8h_source.html  _x_d_g_icon_directory_8h_source.html  _x_d_g_icon_theme_8h_source.html  _x_d_g_icon_theme_manager_8h_source.html  _x_d_g_kit_8h_source.html  _x_d_g_log_8h_source.html  _x_d_g_map_8h_source.html  _x_d_g_namespace_8h_source.html  _x_d_g_utils_8h_source.html  annotated.html  class_x_d_g_1_1_x_d_g_i_n_i-members.html  class_x_d_g_1_1_x_d_g_i_n_i.html  class_x_d_g_1_1_x_d_g_i_n_i_view-members.html  class_x_d_g_1_1_x_d_g_i_n_i_view.html  class_x_d_g_1_1_x_d_g_icon-members.html  class_x_d_g_1_1_x_d_g_icon.html  class_x_d_g_1_1_x_d_g_icon_directory-members.html  class_x_d_g_1_1_x_d_g_icon_directory.html  class_x_d_g_1_1_x_d_g_icon_theme-members.html  class_x_d_g_1_1_x_d_g_icon_theme.html  class_x_d_g_1_1_x_d_g_icon_theme_manager-members.html  class_x_d_g_1_1_x_d_g_icon_theme_manager.html  class_x_d_g_1_1_x_d_g_kit-members.html  class_x_d_g_1_1_x_d_g_kit.html  class_x_d_g_1_1_x_d_g_log-members.html  class_x_d_g_1_1_x_d_g_log.html  contact_page.html  dir_101bc0ac6cabbe428786f3190f26f656.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ae2509a6684b0f1c1e4d81909e1e9679.html  downloads_page.html  doxygen-awesome.css  environment_page.html  examples_page.html  index.html  menudata.js  namespace_x_d_g.html  (+3 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+22 more)
doxygen/: Doxyfile  Layout.xml  footer.html
doxygen/md/: Contact.md  Downloads.md  Environment.md  Examples.md  MainPage.md
pkg/fedora/: latest.spec  template.spec
scripts/: env.sh
scripts/docs/: gen_doc.sh
src/CZ/XDG/: CZXDGVersion.h.in  XDG.h  XDGINI.cpp  XDGINI.h  XDGIcon.cpp  XDGIcon.h  XDGIconDirectory.cpp  XDGIconDirectory.h  XDGIconTheme.cpp  XDGIconTheme.h  XDGIconThemeManager.cpp  XDGIconThemeManager.h  XDGKit.cpp  XDGKit.h  XDGLog.cpp  XDGLog.h  XDGMap.h  XDGUtils.cpp  XDGUtils.h
src/CZ/XDGKit/: XDGKit.h
src/XDGKit/: XDGINI.cpp  XDGINI.h  XDGIPoint.h  XDGIRect.h  XDGIcon.cpp  XDGIcon.h  XDGIconDirectory.cpp  XDGIconDirectory.h  XDGIconTheme.cpp  XDGIconTheme.h  XDGIconThemeManager.cpp  XDGIconThemeManager.h  XDGKit.cpp  XDGKit.h  XDGLog.cpp  XDGLog.h  XDGMap.h  XDGNamespace.h  XDGParsers.cpp  XDGParsers.h  XDGUtils.cpp  XDGUtils.h
src/cz-xdgkit-icon-theme-indexer/: main.cpp  meson.build
src/examples/cz-xdgkit-icons-example/: main.cpp  meson.build
src/examples/icons/: main.cpp  meson.build
src/xdgkit-icon-theme-indexer/: main.cpp  meson.build
